--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
             android:name=".newsDetails"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".feedback"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
